# exam_system_mvp

./: README.md  db.sqlite3  debug_templates.py  main.py  pyproject.toml
exam_system/: asgi.py  settings.py  urls.py  wsgi.py
exams/: admin.py  models.py  urls.py  views.py
exams/management/commands/: create_test_data.py
exams/migrations/: 0001_initial.py  0002_alter_examresult_options_and_more.py
templates/: base.html
templates/exams/: exam_list.html  exam_result_detail.html  exam_results.html  exam_results_list.html  import_students.html  no_attempts.html  student_login.html  take_exam.html
