[project]
name = "mytest-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "asgiref>=3.9.1",
    "django>=5.2.6",
    "httptools>=0.6.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "uvicorn>=0.35.0",
]
